--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
     "loopfunc"        : false,
     "notypeof"        : false,
     "sub"             : false,
+    "maxlen"          : 100,
     "shadow"          : false,
     "smarttabs"       : false,
     "proto"           : false,
